# regex-data-gen

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  improved_test.json  mvp_test.rs  test_codes.tsv  test_data_generation.rs  test_dates.csv  test_emails.json  test_phones.xml  test_rand_regex.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: test_rand_regex.rs
core/src/: data_generator.rs  lib.rs  regex_engine.rs
core/src/exporters/: csv.rs  json.rs  mod.rs  tsv.rs  xml.rs
core/tests/: integration_tests.rs
docs/: API.md  README.md
docs/examples/: basic_usage.md
web/: package.json  tailwind.config.js
web/src/: app.css  app.html
