[workspace]
resolver = "2"
members = [
    "core",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["MINWOO KIM <oxygen3112@daum.net>"]

[workspace.dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
rand_regex = "0.18"
csv = "1.3"
quick-xml = "0.38"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1