[package]
name = "regex-data-gen-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for regex data generation"
license = "MIT"

[[bin]]
name = "regex-data-gen"
path = "src/main.rs"

[dependencies]
regex-data-gen-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }