[package]
name = "regex-data-gen-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for regex data generation"
license.workspace = true
authors.workspace = true

[[bin]]
name = "regex-data-gen"
path = "src/main.rs"

[dependencies]
regex-data-gen-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }