[package]
name = "regex-data-gen-core"
version = "0.1.0"
edition = "2024"
description = "Core library for generating random data from regex patterns"
license = "MIT"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"

[lib]
name = "regex_data_gen_core"
crate-type = ["cdylib", "rlib"]