[package]
name = "regex-data-gen-core"
version.workspace = true
edition.workspace = true
description = "Core library for generating random data from regex patterns"
license.workspace = true
authors.workspace = true

[dependencies]
regex = { workspace = true }
regex-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_regex = { workspace = true }

[lib]
name = "regex_data_gen_core"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.0"